--- a/s4-payment.njk
+++ b/s4-payment.njk
@@ -114,8 +114,7 @@ layout: nucleus-partnership
     <ns-cta type="direct" href="" icon="arrow-right" onclick="action()" loading="false" loadingmessage="Loading..." tabindex="0">Setup Direct Debit</ns-cta>
 
     <div style="width: 180px; height: 64px;">
-      <ns-image src="https://user-images.githubusercontent.com/34439889/133385388-721326de-61e9-4b51-9846-cacf2283d22c.png
-      " ratio="1x1" alt="Direct Debit logo" backgroundsize="cover"></ns-image>
+      <ns-image src="https://user-images.githubusercontent.com/34439889/133385388-721326de-61e9-4b51-9846-cacf2283d22c.png" ratio="1x1" alt="Direct Debit logo" backgroundsize="cover"></ns-image>
     </div>
     <p class="p-caption">British Gas originators identification number: <b>948555</b></p>
 
