Fix price issues

--- a/s4.2-payment.njk
+++ b/s4.2-payment.njk
@@ -12,8 +12,7 @@ layout: nucleus-partnership
 everything else below this panel and change the h3 to say - Please select
 what you need. Another way we could handle this scenario is to change all values to 0.-->
 
-<div x-data="appStore()"
-  x-init="price = getPrices(products)">
+<div x-data="appStore()">
 
   <ns-panel>
     <ns-progress steps="4" current="3" info="Payment" next="Account setup"></ns-progress>
