--- a/s4.2-payment.njk
+++ b/s4.2-payment.njk
@@ -8,10 +8,6 @@ eleventyNavigation:
 layout: nucleus-partnership
 ---
 
-<!-- /// if all cover items are deselected at this step, hide
-everything else below this panel and change the h3 to say - Please select
-what you need. Another way we could handle this scenario is to change all values to 0.-->
-
 <div x-data="appStore()">
 
   <ns-panel>
@@ -29,7 +25,7 @@ what you need. Another way we could handle this scenario is to change all values
       <template x-for="product in products">
         <ns-inputter heading="" x-bind:name="product.id">
           <ns-selector x-bind:decoration="product.decoration" image="" keyline="">
-            <input type="checkbox" x-on:click="toggleSelection(products,product.id,paymentMethod)" x-bind:id="product.id" x-bind:name="product.id" x-bind:value="product.id" x-bind:checked="product.selected" x-bind:disabled="product.disabled">
+            <input type="checkbox" x-on:click="toggleSelection(products,product.id);price=getPrices(products);" x-bind:id="product.id" x-bind:name="product.id" x-bind:value="product.id" x-bind:checked="product.selected">
             <label x-bind:for="product.id" x-text="product.name"></label>
             <ns-content slot="description">
               <h3 class="h4 enlighten"><b x-text="product.displayPrice[paymentMethod]"></b> <span x-text="paymentMethod === 'monthly' ? 'per month' : 'per year'"></span></h3>
@@ -54,7 +50,7 @@ what you need. Another way we could handle this scenario is to change all values
           <input type="radio" id="dd-monthly" name="question" value="monthly" x-model="paymentMethod">
           <label for="dd-monthly">Monthly Direct Debit</label>
           <ns-content slot="description" id="1a">
-            <h3 class="h2 enlighten"><b x-text="price.monthly" id="monthly-price-1"></b> <span>per month</span></h3>
+            <h3 class="h2 enlighten"><b x-text="price.monthly"></b> per month</h3>
           </ns-content>
         </ns-selector>
 
@@ -62,17 +58,34 @@ what you need. Another way we could handle this scenario is to change all values
           <input type="radio" id="dd-annual" name="question" value="annual" x-model="paymentMethod">
           <label for="dd-annual">Annual Direct Debit</label>
           <ns-content slot="description" id="1b">
-            <h3 class="h2 enlighten"><b x-text="price.annual" id="annual-price-2"></b> <span>for 12 months</span></h3>
+            <h3 class="h2 enlighten"><b x-text="price.annual"></b> for 12 months</h3>
           </ns-content>
         </ns-selector>
       </ns-column>
     </ns-inputter>
 
     <ns-standout decoration="green-light">
-      <ns-content>
-        <h2 class="h2 enlighten">You're setting up a Direct Debit for <b x-text="price.monthly" id="monthly-price-2"></b> per month.</h2>
-        <p class="p-large">That's <b x-text="price.annual" id="annual-price-1"></b> per year.</p>
-      </ns-content>
+      <template x-if="paymentMethod === 'monthly'">
+        <ns-content>
+          <h2 class="h2 enlighten">You're setting up a Direct Debit for
+            <b x-text="price.monthly"></b> per month.
+          </h2>
+          <p class="p-large">That's
+            <b x-text="price.annual"></b> per year.
+          </p>
+        </ns-content>
+      </template>
+
+      <template x-if="paymentMethod === 'annual'">
+        <ns-content>
+          <h2 class="h2 enlighten">You're setting up a Direct Debit for
+            <b x-text="price.annual"></b> <span>per year.</span>
+          </h2>
+          <p class="p-large">That's
+            <b x-text="price.monthly"></b> <span>per month.</span>
+          </p>
+        </ns-content>
+      </template>
     </ns-standout>
 
   </ns-panel>
@@ -118,9 +131,16 @@ what you need. Another way we could handle this scenario is to change all values
   </ns-panel>
 
   <ns-panel>
+    <template x-if="message.display">
+      <ns-highlighter x-bind:type="message.type">
+        <h2 slot="heading" x-text="message.heading"></h2>
+        <p x-text="message.content"></p>
+      </ns-highlighter>
+    </template>
+
     <ns-content>
       <p class="p-small">By clicking the Setup Direct Debit Button, I confirm that I have read all important documents.</p>
-      <ns-cta type="direct" href="!#">Setup Direct Debit</ns-cta>
+      <ns-cta type="direct" x-on:click="message = onSetupDirectDebit(products)">Setup Direct Debit</ns-cta>
       <figure>
         <img src="https://user-images.githubusercontent.com/34439889/133822183-22c02a41-5ca9-4866-aed8-a39347885155.png" alt="Direct Debit logo" width="194" height="86">
         <figcaption>British Gas originators identification number: <b>948555</b></figcaption>
